--- a/landing.html
+++ b/landing.html
@@ -25,18 +25,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Connect to Google Web Fonts -->
+<link rel="stylesheet" href="/Users/daniellecalderone/Dropbox/Booth 2016-18/Application Development/class 2/font-awesome-4.7.0/css/font-awesome.min.css">
+
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,300italic,400italic,600italic,700italic,800,800italic' rel='stylesheet' type='text/css'>
-<style>
-.row{border: thin red solid;}
-img, h1, h2, p { border: thin green solid;
-}
-</style>
 
 </head>
 <body>
 
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -45,57 +44,30 @@ img, h1, h2, p { border: thin green solid;
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#">
+      <i class="fa fa-dropbox" aria-hidden="true"></i>
+    Filebox</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+        <li><p class="navbar-btn"> <a href="#" class="btn btn-link">Download the app </a> </p> </li>
+        <li><p class="navbar-btn"> <a href="#" class="btn btn-link">Sign in</a> </p></li>
+        <li> <p class="navbar-btn"> <a href="#" class="btn btn-default">Try Filebox Business</a></p></li>
       </ul>
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-  <div class="container">
+  <div class="container padding-inside-top-md padding-inside-bottom-md">
       <div class="row">
           <div class="col-md-offset-1 col-md-10">
           <img src="assets/images/hero.png" class="img-responsive">
         </div>
       </div>
-
+    <div class="container padding-inside-top-sm"> </div>
       <div class="row">
           <div class="col-md-offset-1 col-md-4"><h2>
               Filebox works the way you do
@@ -106,26 +78,26 @@ img, h1, h2, p { border: thin green solid;
           <div class="col-md-offset-2 col-md-4">
             <form>
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+      <input type="full name" class="form-control" id="exampleInputFullName" placeholder="Full name">
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <input type="email" class="form-control" id="exampleInputemail" placeholder="Email">
     </div>
     <div class="form-group">
-      <label for="exampleInputFile">File input</label>
-      <input type="file" id="exampleInputFile">
-      <p class="help-block">Example block-level help text here.</p>
+      <input type="password" class="form-control" id="exampleInputpassword" placeholder="Password">
     </div>
     <div class="checkbox">
       <label>
-        <input type="checkbox"> Check me out
+        <input type="checkbox"> I agree to <a href="https://github.com/appdevspring17/filebox_with_only_bootstrap">Filebox terms</a>
       </label>
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="button" class="btn btn-primary btn-md btn-block">Sign up for free</button>
+    <hr>
+    <button type="button" class="btn btn-primary btn-md btn-block"> <i class="fa fa-google" aria-hidden="true"></i>
+      Sign up free with Google</button>
   </form></div>
       </div>
+      <div class="container padding-inside-top-md padding-inside-bottom-md"> </div>
       <div class="row">
           <div class="col-md-offset-1 col-md-4"> <h2>
             Take your docs anywhere
@@ -136,35 +108,122 @@ img, h1, h2, p { border: thin green solid;
         </div>
           <div class="col-md-offset-2 col-md-4"><img src="assets/images/docs-anywhere.png" class="img-responsive"> </div>
       </div>
+<div class="container padding-inside-top-md padding-inside-bottom-md"> </div>
+      <div class="row">
+          <div class="col-md-offset-1 col-md-4"> <img src="assets/images/send-videos-quickly.png"class="img-responsive" alt=""></div>
+          <div class="col-md-offset-2 col-md-4">
+<h2>Send videos quickly</h2>
+<p>Send your entire wedding video to family with a simple link. It’s easy to share large files with anyone — even if they don’t have a Filebox account.</p>
+          </div>
+      </div>
+      <div class="container padding-inside-top-md padding-inside-bottom-md"> </div>
+      <div class="row">
+          <div class="col-md-offset-1 col-md-4">
+<h2>Keep your photos safe</h2>
+<p>Back up vacation photos automatically from your phone or computer. That way, memories are safe as soon as you make them, and you can relive them from any device.</p>
+          </div>
+          <div class="col-md-offset-2 col-md-4"><img src="assets/images/keep-your-photos-safe.png"class="img-responsive" alt=""></div>
+      </div>
+      <div class="container padding-inside-top-md padding-inside-bottom-md"> </div>
+      <div class="row">
+          <div class="col-md-offset-1 col-md-4"><img src="assets/images/work-on-slides-together.png" class="img-responsive" alt=""></div>
+          <div class="col-md-offset-2 col-md-4">
+            <h2>Work on slides together</h2>
+            <p>Edit a presentation with teammates without emailing files back and forth. When you edit a file in a shared folder, everyone gets the update automatically.</p>
+          </div>
+      </div>
+        <div class="container padding-inside-top-md padding-inside-bottom-md"> </div>
+      <div class="row">
+          <div class="col-md-offset-1 col-md-4">
+            <h2>Never lose a file again</h2>
+            <p>Left your phone on the train? Your photos, docs, and videos are safe. Just sign in to Filebox from any device, and your files will be there waiting for you.</p>
+          </div>
+          <div class="col-md-offset-2 col-md-4"><img src="assets/images/never-lose-a-file-again.png"class="img-responsive" alt=""></div>
+      </div>
+        <div class="container padding-inside-top-md padding-inside-bottom-md"> </div>
+      <div class="row">
+          <div class="col-md-offset-4 col-md-4"><form>
+            <h2>Get started now</h2>
+            <div class="form-group">
+              <input type="Full name" class="form-control" id="exampleInputFullName" placeholder="Full name">
+            </div>
+  <div class="form-group">
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox"> I agree to <a href="https://github.com/appdevspring17/filebox_with_only_bootstrap">Filebox terms</a>
+    </label>
+  </div>
+  <button type="button" class="btn btn-primary btn-md btn-block">Sign up for free</button>
+  <hr>
+  <button type="button" class="btn btn-primary btn-md btn-block"> <i class="fa fa-google" aria-hidden="true"></i>
+    Sign up free with Google</button>
+</form></div>
+<div class="container padding-inside-top-md padding-inside-bottom-md"> </div>
+<div class="container padding-inside-top-md padding-inside-bottom-md"> </div>
+</div>
+      </div>
+          <div class="col-lg-2">
+<h4>Filebox</h4>
+<ul class="list-unstyled">
+  <li> Desktop app </li>
+    <li> Mobile apps</li>
+    <li> Plans</li>
+      <li> Security</li>
+</ul>
+          </div>
+          <div class="col-lg-2">
+<h4>Company</h4>
+<ul class="list-unstyled">
+  <li> About us </li>
+  <li> Jobs </li>
+  <li> Press </li>
+  <li>Blog </li>
+</ul>
+          </div>
+          <div class="col-lg-2">
+          <h4>Support</h4>
+          <ul class="list-unstyled">
+            <li> Help Center </li>
+            <li> Get started </li>
+            <li> Contact </li>
+            <li> Privacy & terms </li>
+          </ul>
 
-      <div class="row">
-          <div class="col-md-offset-1 col-md-4"></div>
-          <div class="col-md-offset-2 col-md-4"></div>
-      </div>
-      <div class="row">
-          <div class="col-md-offset-1 col-md-4"></div>
-          <div class="col-md-offset-2 col-md-4"></div>
-      </div>
-      <div class="row">
-          <div class="col-md-offset-1 col-md-4"></div>
-          <div class="col-md-offset-2 col-md-4"></div>
-      </div>
-      <div class="row">
-          <div class="col-md-offset-1 col-md-4"></div>
-          <div class="col-md-offset-2 col-md-4"></div>
-      </div>
-      <div class="row">
-          <div class="col-md-offset-4 col-md-4"></div>
-      </div>
-      <div class="row">
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
-          <div class="col-md-2"></div>
+        </div>
+          <div class="col-lg-2">
+            <h4>Community</h4>
+            <ul class="list-unstyled">
+              <li> Developers </li>
+              <li> Referrals </li>
+              <li> Forum </li>
+            </ul>
+          </div>
+          <div class="col-lg-2">
+            <h4>Connect</h4>
+            <ul class="list-unstyled">
+              <li> Twitter </li>
+              <li> Facebook </li>
+              <li> Google+ </li>
+              <li> YouTube </li>
+            </ul>
+          </div>
+          <div class="col-lg-2">
+            <h4>Products</h4>
+            <ul class="list-unstyled">
+              <li> Pro </li>
+              <li> Business </li>
+              <li> Enterprise </li>
+            </ul>
+          </div>
       </div>
   </div>
+  <div class="container padding-inside-top-md padding-inside-bottom-md"> </div>
+  <div class="container padding-inside-top-md padding-inside-bottom-md"> </div>
 
 
 
